<resources>
    <string name="app_name">NDP song</string>
    <string name="song_title">Song Title</string>
    <string name="enter_song_title_here">Enter song title here</string>
    <string name="singers">Singers</string>
    <string name="enter_singer_s_name_here">Enter singer\'s name here</string>
    <string name="year">Year</string>
    <string name="stars">Stars</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="insert">Insert</string>
    <string name="show_list">show list</string>
</resources>